--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     </footer>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="./script/scripts.js" type="module"></script>
+  <script src="./script/dolar.js" type="module"></script>
+  <script src="./script/iene.js" type="module"></script>
 </body>
 
 </html>
